@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/rcsi
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/rcsi/Attic/ChangeLog,v 1.2 2005/05/07 17:02:04 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/rcsi/Attic/ChangeLog,v 1.3 2005/12/12 08:59:55 robbat2 Exp $
+
+  12 Dec 2005; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml:
+  Add metadata.xml
 
   07 May 2005; David Holm <dholm@gentoo.org> rcsi-0.5.ebuild:
   Added to ~ppc.
